# skills

web-archiver/: SKILL.md
web-archiver-command/: archiver.py  pyproject.toml
web-archiver/scripts/: archiver.py  scraping.py
