[build-system]
requires = ["flit-core"]
build-backend = "flit_core.buildapi"

[project]
name = "web-archiver"
version = "0.1.0"
description = "Crawl websites and save pages as Markdown files"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai",
]

[project.scripts]
web-archiver = "web-archiver:main"
